Looks better. \nLocalization is working quite good.

--- a/locale/pl-PL.properties
+++ b/locale/pl-PL.properties
@@ -1,2 +1,4 @@
-n_tabs[one]= Masz %1 kartę
-n_tabs[other]= Masz %1 kart
+tooltiptext[one]=Masz %d kartę
+tooltiptext[few]=Masz %d karty
+tooltiptext[many]=Masz %d kart
+tooltiptext=Masz %d kart
